# homeconnect

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  brian.md  build.rs  docker-compose.dev.yml  docker-compose.yml
migrations/: 0001_init.sql  0002_settings.sql  0003_device_addr.sql  0004_route_sync_types.sql  0005_device_params_cache.sql  0006_drive_stats.sql  0007_device_health.sql  0008_movies.sql  0009_movie_disabled.sql
src/: access.rs  athena.rs  auth.rs  config.rs  db.rs  device_params.rs  device_ssh.rs  devsync.rs  error.rs  ignore.rs  ingest.rs  lib.rs  main.rs  model_select.rs  models.rs  movie.rs  parse.rs  retention.rs  serve.rs  settings.rs  state.rs  storage.rs  sync_queue.rs  transcode.rs
src/api/: device_params.rs  devsync.rs  manage.rs  mod.rs  onboard.rs  settings.rs  users.rs  v1.rs  v2.rs
src/cereal/: mod.rs
tests/: m1_athena.rs  m1_e2e.rs  m2_parse.rs  m3_browse.rs  m4_spa.rs  m5_transcode.rs  m6_retention.rs  m7_devsync.rs  m8_device_params.rs  m_manage.rs  m_onboard.rs  m_pairing.rs  m_share.rs  m_transcode_device.rs  m_users.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css
web/src/lib/: Account.svelte  AddDevice.svelte  DeviceSettings.svelte  Drive.svelte  DriveGraph.svelte  DriveModel.svelte  DriveOverlay.svelte  Drives.svelte  Login.svelte  ManageData.svelte  Queues.svelte  Settings.svelte  Stats.svelte  api.js  format.js
